--- a/uni/informatik/planner.html
+++ b/uni/informatik/planner.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-10-03 Wed 10:56 -->
+<!-- 2018-10-10 Wed 17:46 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -239,8 +239,8 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<div id="outline-container-org9982fdb" class="outline-2">
-<h2 id="org9982fdb"><span class="section-number-2">1</span> Misc</h2>
+<div id="outline-container-org4ec91f5" class="outline-2">
+<h2 id="org4ec91f5"><span class="section-number-2">1</span> Misc</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://www.tu-chemnitz.de/verwaltung/studentenamt/abt11/ordnungen/2011/2011/18-2011/AB_182011_2.pdf">Prüfungsordnung</a></li>
@@ -251,12 +251,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc0e8877" class="outline-2">
-<h2 id="orgc0e8877"><span class="section-number-2">2</span> Pflichtmodule</h2>
+<div id="outline-container-orgbcb52e2" class="outline-2">
+<h2 id="orgbcb52e2"><span class="section-number-2">2</span> Pflichtmodule</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org399494b" class="outline-3">
-<h3 id="org399494b"><span class="section-number-3">2.1</span> Basismodule</h3>
+<div id="outline-container-orgf599c83" class="outline-3">
+<h3 id="orgf599c83"><span class="section-number-3">2.1</span> Basismodule</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>29 ETCS benötigt</li>
@@ -299,8 +299,8 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-orgc3e7b62" class="outline-3">
-<h3 id="orgc3e7b62"><span class="section-number-3">2.2</span> Andere</h3>
+<div id="outline-container-org764c638" class="outline-3">
+<h3 id="org764c638"><span class="section-number-3">2.2</span> Andere</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>50 ETCS benötigt</li>
@@ -340,8 +340,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org78cb2d4" class="outline-2">
-<h2 id="org78cb2d4"><span class="section-number-2">3</span> Wahlmodule</h2>
+<div id="outline-container-org510a922" class="outline-2">
+<h2 id="org510a922"><span class="section-number-2">3</span> Wahlmodule</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>41 ETCS benötigt</li>
@@ -525,16 +525,16 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-org3091532" class="outline-2">
-<h2 id="org3091532"><span class="section-number-2">4</span> Modulplanung</h2>
+<div id="outline-container-orgd8b8670" class="outline-2">
+<h2 id="orgd8b8670"><span class="section-number-2">4</span> Modulplanung</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org160a01d" class="outline-3">
-<h3 id="org160a01d"><span class="section-number-3">4.1</span> Studienablaufplan</h3>
+<div id="outline-container-orgd030f89" class="outline-3">
+<h3 id="orgd030f89"><span class="section-number-3">4.1</span> Studienablaufplan</h3>
 <div class="outline-text-3" id="text-4-1">
 </div>
-<div id="outline-container-org1c97bb0" class="outline-4">
-<h4 id="org1c97bb0"><span class="section-number-4">4.1.1</span> Solution Plan</h4>
+<div id="outline-container-org2e665d4" class="outline-4">
+<h4 id="org2e665d4"><span class="section-number-4">4.1.1</span> Solution Plan</h4>
 <div class="outline-text-4" id="text-4-1-1">
 <p>
 Der finale Plan der verfolgt wird
@@ -633,12 +633,12 @@ Der finale Plan der verfolgt wird
 </div>
 </div>
 
-<div id="outline-container-org8261e28" class="outline-2">
-<h2 id="org8261e28"><span class="section-number-2">5</span> Stundenpläne</h2>
+<div id="outline-container-orgb2b2ec2" class="outline-2">
+<h2 id="orgb2b2ec2"><span class="section-number-2">5</span> Stundenpläne</h2>
 <div class="outline-text-2" id="text-5">
 </div>
-<div id="outline-container-orgc4e0c37" class="outline-3">
-<h3 id="orgc4e0c37"><span class="section-number-3">5.1</span> WiSe 18/19</h3>
+<div id="outline-container-org8a63ae4" class="outline-3">
+<h3 id="org8a63ae4"><span class="section-number-3">5.1</span> WiSe 18/19 (required)</h3>
 <div class="outline-text-3" id="text-5-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -672,16 +672,16 @@ Der finale Plan der verfolgt wird
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">Informatik I [VL]</td>
 <td class="org-left">&#xa0;</td>
+<td class="org-left">Informatik I [VL]</td>
 </tr>
 
 <tr>
 <td class="org-left">09:15 - 10:45</td>
+<td class="org-left">Datenbanken [Übung]</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">Informatik I [Übung/Prakt] im Wechsel</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
@@ -689,7 +689,95 @@ Der finale Plan der verfolgt wird
 <td class="org-left">11:30 - 13:00</td>
 <td class="org-left">Algo &amp; Prog [VL]</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">Datenbanken [VL]</td>
+<td class="org-left">Informatik I[Übung/Prakt]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Algo &amp; Prog [VL]</td>
+</tr>
+
+<tr>
+<td class="org-left">13:45 - 15:15</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Verteilte Systeme [VL ab 13:30]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">15:30 - 17:00</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Algo &amp; Prog [Übung]</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">17:15 - 18:45</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Verteilte Systeme [Übung]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+<div id="outline-container-orga2eaabf" class="outline-3">
+<h3 id="orga2eaabf"><span class="section-number-3">5.2</span> WiSe 18/19 ("alle" Veranstaltungen)</h3>
+<div class="outline-text-3" id="text-5-2">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Time</th>
+<th scope="col" class="org-left">Mo</th>
+<th scope="col" class="org-left">Di</th>
+<th scope="col" class="org-left">Mi</th>
+<th scope="col" class="org-left">Do</th>
+<th scope="col" class="org-left">Fr</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">07:30 - 09:00</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Informatik I [VL]</td>
+</tr>
+
+<tr>
+<td class="org-left">09:15 - 10:45</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">11:30 - 13:00</td>
+<td class="org-left">Algo &amp; Prog [VL]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Informatik I[Übung/Prakt](+Datenbanken [VL])</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">Algo &amp; Prog [VL]</td>
 </tr>
@@ -698,7 +786,7 @@ Der finale Plan der verfolgt wird
 <td class="org-left">13:45 - 15:15</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">Verteile Systeme [VL ab 13:30]</td>
-<td class="org-left">Datenbanken [Übung]</td>
+<td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">Algo &amp; Prog [Übung]</td>
 </tr>
@@ -707,15 +795,15 @@ Der finale Plan der verfolgt wird
 <td class="org-left">15:30 - 17:00</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">Algo &amp; Prog [Tut]</td>
-<td class="org-left">IT-Anwendungen [VL]</td>
+<td class="org-left">(Algo &amp; Prog [Q&amp;A])</td>
+<td class="org-left">Algo &amp; Prog [Übung]/IT-Anwendungen [VL]</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">17:15 - 18:45</td>
 <td class="org-left">&#xa0;</td>
-<td class="org-left">Algo &amp; Prog [Tut]</td>
+<td class="org-left">(Algo &amp; Prog [begleitetes Prog])</td>
 <td class="org-left">Verteilte Systeme [Übung]</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
@@ -727,7 +815,7 @@ Der finale Plan der verfolgt wird
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2018-10-03 Wed 10:56</p>
+<p class="date">Created: 2018-10-10 Wed 17:46</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
