--- a/uni/informatik/planner.html
+++ b/uni/informatik/planner.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-10-10 Wed 17:46 -->
+<!-- 2018-10-18 Thu 14:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -239,8 +239,8 @@ for the JavaScript code in this tag.
 </head>
 <body>
 <div id="content">
-<div id="outline-container-org4ec91f5" class="outline-2">
-<h2 id="org4ec91f5"><span class="section-number-2">1</span> Misc</h2>
+<div id="outline-container-orgbee2168" class="outline-2">
+<h2 id="orgbee2168"><span class="section-number-2">1</span> Misc</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://www.tu-chemnitz.de/verwaltung/studentenamt/abt11/ordnungen/2011/2011/18-2011/AB_182011_2.pdf">Prüfungsordnung</a></li>
@@ -251,12 +251,12 @@ for the JavaScript code in this tag.
 </ul>
 </div>
 </div>
-<div id="outline-container-orgbcb52e2" class="outline-2">
-<h2 id="orgbcb52e2"><span class="section-number-2">2</span> Pflichtmodule</h2>
+<div id="outline-container-org81de486" class="outline-2">
+<h2 id="org81de486"><span class="section-number-2">2</span> Pflichtmodule</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orgf599c83" class="outline-3">
-<h3 id="orgf599c83"><span class="section-number-3">2.1</span> Basismodule</h3>
+<div id="outline-container-org6ab9602" class="outline-3">
+<h3 id="org6ab9602"><span class="section-number-3">2.1</span> Basismodule</h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li>29 ETCS benötigt</li>
@@ -299,8 +299,8 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-org764c638" class="outline-3">
-<h3 id="org764c638"><span class="section-number-3">2.2</span> Andere</h3>
+<div id="outline-container-org9f2fd5b" class="outline-3">
+<h3 id="org9f2fd5b"><span class="section-number-3">2.2</span> Andere</h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>50 ETCS benötigt</li>
@@ -340,8 +340,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org510a922" class="outline-2">
-<h2 id="org510a922"><span class="section-number-2">3</span> Wahlmodule</h2>
+<div id="outline-container-org8c687ec" class="outline-2">
+<h2 id="org8c687ec"><span class="section-number-2">3</span> Wahlmodule</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li>41 ETCS benötigt</li>
@@ -525,16 +525,16 @@ for the JavaScript code in this tag.
 </table>
 </div>
 </div>
-<div id="outline-container-orgd8b8670" class="outline-2">
-<h2 id="orgd8b8670"><span class="section-number-2">4</span> Modulplanung</h2>
+<div id="outline-container-orgddd20c0" class="outline-2">
+<h2 id="orgddd20c0"><span class="section-number-2">4</span> Modulplanung</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgd030f89" class="outline-3">
-<h3 id="orgd030f89"><span class="section-number-3">4.1</span> Studienablaufplan</h3>
+<div id="outline-container-org358a3bb" class="outline-3">
+<h3 id="org358a3bb"><span class="section-number-3">4.1</span> Studienablaufplan</h3>
 <div class="outline-text-3" id="text-4-1">
 </div>
-<div id="outline-container-org2e665d4" class="outline-4">
-<h4 id="org2e665d4"><span class="section-number-4">4.1.1</span> Solution Plan</h4>
+<div id="outline-container-org99db8c1" class="outline-4">
+<h4 id="org99db8c1"><span class="section-number-4">4.1.1</span> Solution Plan</h4>
 <div class="outline-text-4" id="text-4-1-1">
 <p>
 Der finale Plan der verfolgt wird
@@ -633,13 +633,109 @@ Der finale Plan der verfolgt wird
 </div>
 </div>
 
-<div id="outline-container-orgb2b2ec2" class="outline-2">
-<h2 id="orgb2b2ec2"><span class="section-number-2">5</span> Stundenpläne</h2>
+<div id="outline-container-orgc802697" class="outline-2">
+<h2 id="orgc802697"><span class="section-number-2">5</span> Stundenpläne</h2>
 <div class="outline-text-2" id="text-5">
 </div>
-<div id="outline-container-org8a63ae4" class="outline-3">
-<h3 id="org8a63ae4"><span class="section-number-3">5.1</span> WiSe 18/19 (required)</h3>
+<div id="outline-container-org8fd48d1" class="outline-3">
+<h3 id="org8fd48d1"><span class="section-number-3">5.1</span> The "holy" child aka le grande finalé</h3>
 <div class="outline-text-3" id="text-5-1">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Time</th>
+<th scope="col" class="org-left">Mo</th>
+<th scope="col" class="org-left">Di</th>
+<th scope="col" class="org-left">Mi</th>
+<th scope="col" class="org-left">Do</th>
+<th scope="col" class="org-left">Fr</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">07:30 - 09:00</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Informatik I [VL]</td>
+</tr>
+
+<tr>
+<td class="org-left">09:15 - 10:45</td>
+<td class="org-left">Datenbanken [Übung]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Inf1[TUT] (ab 9:30 B BT)<sup>2</sup></td>
+</tr>
+
+<tr>
+<td class="org-left">11:30 - 13:00</td>
+<td class="org-left">Algo &amp; Prog [VL]</td>
+<td class="org-left">Algo &amp; Prog [Übung]<sup>1</sup></td>
+<td class="org-left">Datenbanken [VL]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Algo &amp; Prog [VL]</td>
+</tr>
+
+<tr>
+<td class="org-left">13:45 - 15:15</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Verteile Systeme [VL ab 13:30]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">15:30 - 17:00</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">17:15 - 18:45</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">Verteilte Systeme [Übung]</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+
+<p>
+.<sup>1</sup> Bis dato liegt eine Eintragung in die hier vermerkte Übungsgruppe von seiten der Klienten per OPAL nicht vor, da stattdessen eine Eintragung in die Übungsgruppe am Freitag vorgenommen worden ist. Ein Wechsel per OPAL ist derzeit nicht möglich da die Kapazitäten beider Übungsgruppen ausgeschöpft zu sein scheint. Dennoch wird der Klient L.S am Dienstag die Übung aufsuchen und versuchen an ihr teilzunehmen.
+</p>
+
+<p>
+.<sup>2</sup> Hierbei handelt es sich um die Übung/Praktikum "Grundlagen der Informatik I" und nicht um "Informatik I" wie vorgesehen. Der Dozent beider VORLESUNGEN sagt dass es zum Ende des Semesters hin zu unterschieden in den jeweiligen Veranstaltungen kommt. Für M<sub>IGS</sub> Studenten ist eigentlich "Informatik I" vorgesehen, da die Übungen dort jedoch zeitlich schlecht liegen wird das "Grundlagen der Informatik I" am Freitag besucht. Es gab Spekulationen, dass der Tutor am Freitag (Herr Kreutzer) möglicherweise inkompetent sei, sollte sich dies bestätigen findet Freitags die selbe Übung zur selben Zeit von Frau Jachmann statt und könnte als Alternative dienen. Darüber hinaus sollte herausgefunden werden wie sehr die Veranstaltungen "Informatik I" und "Grundlagen der Informatik I" differieren.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org2631790" class="outline-3">
+<h3 id="org2631790"><span class="section-number-3">5.2</span> WiSe 18/19 (required)</h3>
+<div class="outline-text-3" id="text-5-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -725,9 +821,9 @@ Der finale Plan der verfolgt wird
 </div>
 </div>
 
-<div id="outline-container-orga2eaabf" class="outline-3">
-<h3 id="orga2eaabf"><span class="section-number-3">5.2</span> WiSe 18/19 ("alle" Veranstaltungen)</h3>
-<div class="outline-text-3" id="text-5-2">
+<div id="outline-container-orgc00279b" class="outline-3">
+<h3 id="orgc00279b"><span class="section-number-3">5.3</span> WiSe 18/19 ("alle" Veranstaltungen)</h3>
+<div class="outline-text-3" id="text-5-3">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -815,7 +911,7 @@ Der finale Plan der verfolgt wird
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2018-10-10 Wed 17:46</p>
+<p class="date">Created: 2018-10-18 Thu 14:10</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
